Fixes trigger button jumping when date text length changes
Previously when the length of the Date text changed on the trigger button the width of the button reflowed which causes an unslightly reflow. This fix implements a fixed width using `em`s to provide a sensible default width to allow for the longest possible date length.

Resolves https://github.com/Automattic/wp-calypso/pull/29938#issuecomment-453627339

--- a/client/components/date-range/style.scss
+++ b/client/components/date-range/style.scss
@@ -6,6 +6,8 @@
 
 
 .date-range__trigger-btn {
+	text-align: left; // required to avoid content "jumping" as date text changes
+
 	.toggle-visible & {
 		box-shadow: none;
 		background-color: var(--color-neutral-0);
@@ -27,20 +29,10 @@
 	}
 }
 
-.date-range__btn-icon {
-	margin-right: 5px;
-}
 
-.date-range__btn-text {
-	@include hide-content-accessibly;
-
-	@include breakpoint( '>480px' ) {
-		clip: default;
-		height: auto;
-		overflow: visible;
-		position: static;
-		width: auto;
-	}
+.date-range__trigger-btn-text {
+	width: 12.5em; // required to avoid content "jumping" as date text changes
+    display: inline-block;
 }
 
 .date-range__popover-inner {
